Code cleanup; file-related functionality must be kept in SQ for now